correcting submit button spacing

--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ header{
 
 #movie-submit{
     position: absolute;
-    left: 62.5%;
+    left: 64.5%;
 
 }
 
